CHANGES.txt - 11/20/2001
------------------------

CHANGES IN HTMLDOC v1.8.17

    NEW FEATURES

	- Improved table-of-contents generation, with chapter
	  headings at the top of new TOC pages and page numbers
	  based on the header/footer string.

    CHANGES

	- Made some changes in how COLSPAN and ROWSPAN are
	  handled to better match how Netscape and MSIE format
	  things.
	- HTMLDOC now handles .book files with CR, LF, or CR LF
	  line endings.
	- Changed the TOC numbering to use 32-bit integers
	  instead of 8-bit integers...

    BUG FIXES

	- The table cell border and background were offset by
	  the cellpadding when they should only be offset by the
	  cellspacing.
	- The buffer used for periods that lead up to the page
	  number in the table-of-contents was not large enough
	  for a legal-size document in landscape format.
	- If a book only contained chapter headings, the PDF
	  bookmarks would be missing the last chapter heading.
	- Table cells that ended with a break would render
	  incorrectly.
	- Fixed the table pre-format sizing code to properly
	  account for borders, padding, etc.
	- Fixed the table squeezing code to honor minimum widths
	  and properly resize the remaining space.


CHANGES IN HTMLDOC v1.8.16

    CHANGES

	- Now break before and after DIV groups to match most
	  browsers (the HTML spec is ambivalent about it...)

    BUG FIXES

	- HR elements didn't render properly.
	- Background images didn't render properly and could
	  lock up HTMLDOC.
	- The "HALF PAGE" comment would lock up HTMLDOC -
	  HTMLDOC would keep adding pages until it ran out of
	  memory.
	- SUP and SUB used a fixed (reduced) size instead of
	  using a smaller size from the current one.
	- Empty cells could cause unnecessary vertical alignment
	  on the same row.


CHANGES IN HTMLDOC v1.8.15

    NEW FEATURES

	- Now support media source, type, and color attributes
	  in PS output.
	- Now support per-page size, margins, headers, footers,