@@ -458,6 +458,12 @@ should not be performed on large images.
 <P>The <CODE>--no-links</CODE> option specifies that PDF output should not contain
 hyperlinks.
 
+<H3>--no-localfiles</H3>
+
+The <CODE>--no-localfiles</CODE> option disables access to local files on
+the system. This option should be used when providing remote document
+conversion services.
+
 <H3>--no-numbered</H3>
 
 The <CODE>--no-numbered</CODE> option specifies that headings
